Logo alignment, Header fix

--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -35,7 +35,7 @@
 .logo {
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 /* 👤 USER INFO CARD */
@@ -960,8 +960,10 @@
 
 }
 
+.sidebar {
+  transition: left 0.3s ease, box-shadow 0.3s;
+}
 
-/* ========================= */
-/* 📲 TABLET (769px - 1024px) */
-/* ========================= */
-
+.sidebar.open {
+  box-shadow: 10px 0 40px rgba(0,0,0,0.6);
+}
